pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: hello
spec:
  containers:
    - name: nginx
      image: nginx:1.25.1
      ports:
        - containerPort: 80
